<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="amastudio.ali.liveweather.WelcomeActivity">

    <ImageView
        android:id="@+id/liveWeatherLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/description_app_logo"
        app:srcCompat="@drawable/liveweatherlogo" />

    <ImageView
        android:id="@+id/yahooLogo"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:contentDescription="@string/description_yahoo_logo"
        app:srcCompat="@android:color/transparent" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:contentDescription="@string/build_version_text"
        android:gravity="center"
        android:text="@string/build_version_text"
        android:textAlignment="center"
        android:textSize="12sp" />
</LinearLayout>
