<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="amastudio.ali.liveweather.SettingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/doneButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/done_button_text"
            android:textColor="@android:color/background_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="fill_vertical"
                android:text="@string/Temperature_label"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/tempRadioGrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/fahrenheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:tag="f"
                    android:text="@string/fahrenheitSign" />

                <RadioButton
                    android:id="@+id/celsius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:tag="c"
                    android:text="@string/celsiusSign" />
            </RadioGroup>
        </LinearLayout>

        <Switch
            android:id="@+id/setNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/setNoification_checkbox_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/notificationInfo"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/aboutFAB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</android.support.design.widget.CoordinatorLayout>
