<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_backgroud_layout"
    android:fadingEdge="horizontal|vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/about_activity_Title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/headerSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="270dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/amalogo"
                android:contentDescription="@string/description_developer_logo"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/developerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/about_developedBy_note"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/contactemailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:text="@string/about_email_address"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/versionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|center_horizontal"
                    android:text="@string/build_version_text"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/yahooLicence"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/designerLicence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>